tests/machine/x/ocaml/pure_fold.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/pure_fold.ml", line 6, characters 2-15:
6 |   print_endline triple (1 + 2)
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 6):
   4 | 
   5 | let () =
   6 |   print_endline triple (1 + 2)
   7 | 
