tests/machine/x/ocaml/pure_fold.ml
let rec triple x =
  (x * 3)


let () =
  print_endline triple (1 + 2)
